cmake_minimum_required(VERSION 3.10)

project(behavioral_patterns)

add_subdirectory(chain-of-responsibility)
add_subdirectory(command)
add_subdirectory(interpreter)
add_subdirectory(iterator)
add_subdirectory(mediator)
add_subdirectory(memento)
add_subdirectory(observer)
add_subdirectory(state)
add_subdirectory(strategy)
add_subdirectory(template-method)
add_subdirectory(visitor)
